--- a/styles/header.css
+++ b/styles/header.css
@@ -2,7 +2,7 @@ header {
     width: 100%;
     background: black url('../assets/back.svg') center no-repeat;
     color: white;
-    padding: 3rem 2rem ;
+    padding: 4rem 2rem ;
     margin-bottom: 2rem;
     display: flex;
     justify-content: center;
@@ -12,8 +12,9 @@ header {
     min-width: 26rem;
 }
 .c-head > img {
-    width: 15rem;
-    height: 15rem;
+    width: 16rem;
+    height: 16rem;
+    border: 2px solid #999;
     border-radius: 50%;
     margin-bottom: 2rem;
 }
