--- a/styles/main.css
+++ b/styles/main.css
@@ -1,24 +1,21 @@
 main {
     width: 100%;
-    height: 100vh;
-    max-height: 49rem;
-    padding: 2rem;
+    padding: 4rem;
+    display: grid;
+    place-content: center;
 }
 .c-title {
     text-align: center;
-    font-size: 2.7rem;
-    line-height: 2.8rem;
+    font-size: 3.2rem;
+    line-height: 3rem;
     padding: 1rem 0;
-}
-.c-category {
-    padding: 2rem 0;
-    text-align: center;
-    text-transform: uppercase;
 }
 .s-menu {
     width: 100%;
     display: grid;
     justify-content: center;
+    row-gap: 2.5rem;
+    margin-top: 3rem;
 }
 .c-item {
     display: flex;
@@ -30,7 +27,7 @@ main {
     padding: 2rem 1.5rem;
     border: 1px solid #343131cc;
     border-radius: 1.5rem;
-    transition: all .2s linear;
+    /* transition: all .7s linear; */
 
 }
 .c-item img {
@@ -38,10 +35,11 @@ main {
     height: 10.8rem;
     border-radius: 1rem;
 }
-.c-item img:hover {
+/* .c-item img:hover {
     transform: scale(1.1);
-}
+} */
 .c-info__item {
+    width: 100%;
     height: 100%;
     display: grid;
     grid-template-rows: auto 1fr;
@@ -50,6 +48,7 @@ main {
 .c-top__menu {
     display: flex;
     align-items: center;
+    justify-content: space-between;
 }
 .c-top__menu h3 {
     font-size: 1.8rem;
@@ -57,6 +56,9 @@ main {
 }
 .c-price {
     color: var(--ligth-green);
+}
+.c-price small {
+    display: block;
 }
 .c-price span {
     font-size: 1.7rem;
