--- a/styles/index.css
+++ b/styles/index.css
@@ -28,7 +28,6 @@ html, body {
 body {
     min-height: 100vh;
     font-size: 1.6rem;
-    position: relative;
     padding-bottom: 4rem;
 }
 h1,h2,h3 {
@@ -48,14 +47,15 @@ footer {
     border: 0;
     background-color: var(--red);
     box-shadow: 0px 1px 8px 0px #000000b0;
-    font-size: 1.7rem;
+    font-size: 1.4rem;
+    font-weight: 500;
 }
 .c-btn__footer i {
     font-size: 2rem;
 }
 
 /* media queries */
-@media screen and (min-width: 600px) and (max-width: 780px) {
+@media screen and (min-width: 600px) and (max-width: 794px) {
     .s-menu {
         row-gap: 3.5rem;
     }
@@ -64,18 +64,23 @@ footer {
         flex-direction: row;
     }
 }
-@media screen and (min-width: 781px) and (max-width: 992px) {
+@media screen and (min-width: 795px) and (max-width: 992px) {
+    main {
+        padding: 0 2rem;
+    }
     .s-menu {
         grid-template-columns: 1fr 1fr;
-        column-gap: 3.5rem;
+        column-gap: 2.5rem;
     }
     .c-item {
         width: auto;
         flex-direction: row;
     }
+    .c-top__menu h3 {
+        width: 12.9rem;
+    }
     #c-cart {
-        width: max-content;
-        padding: .5rem 2rem;
+        width: 100%;
     }
 }
 @media screen and (min-width: 993px) {
@@ -87,6 +92,9 @@ footer {
     .c-item {
         width: auto;
         flex-direction: row;
+    }
+    .c-item img {
+        width: 17.5rem;
     }
     .c-top__menu h3 {
         width: 12.9rem;
