--- a/styles/main.css
+++ b/styles/main.css
@@ -63,17 +63,17 @@ main {
 .c-price span {
     font-size: 1.7rem;
 }
-#c-cart {
+.c-cart {
     width: 100%;
     background: black;
     border: 0;
     border-radius: 0.5rem;
-    padding: 0.5rem 1rem;
+    padding: 1rem;
     font-size: 1.4rem;
     font-weight: bold;
     color: white;
     text-transform: uppercase;
 }
-#c-cart i {
+.c-cart i {
     font-size: 1.8rem;
 }
