--- a/styles/index.css
+++ b/styles/index.css
@@ -18,6 +18,7 @@
     --ligth-green: #41ec63;
     --green: #20ce20;
     --red: #f14848;
+    --border-color: #0000007b;
 }
 button:hover {
     cursor: pointer;
@@ -29,6 +30,7 @@ body {
     min-height: 100vh;
     font-size: 1.6rem;
     padding-bottom: 4rem;
+    background: #f5f5f5;
 }
 h1,h2,h3 {
     font-family: var(--title-font);
@@ -47,7 +49,7 @@ footer {
     border: 0;
     background-color: var(--red);
     box-shadow: 0px 1px 8px 0px #000000b0;
-    font-size: 1.4rem;
+    font-size: 1.5rem;
     font-weight: 500;
 }
 .c-btn__footer i {
@@ -102,5 +104,10 @@ footer {
     #c-cart {
         width: 100%;
         padding: .5rem 2rem;
+    }
+    /* header */
+    #open {
+        flex-direction: row;
+        column-gap: 10rem;
     }
 }
