--- a/styles/header.css
+++ b/styles/header.css
@@ -2,7 +2,7 @@ header {
     width: 100%;
     background: black url('../assets/back.svg') center no-repeat;
     color: white;
-    padding: 5rem 2rem;
+    padding: 5rem 4rem;
     margin-bottom: 2rem;
     display: flex;
     justify-content: center;
@@ -16,7 +16,7 @@ header {
     height: 16rem;
     border: 2px solid #999;
     border-radius: 50%;
-    margin-bottom: 2rem;
+    margin-bottom: 1rem;
 }
 .c-header__info {
     display: grid;
@@ -30,7 +30,7 @@ header {
     font-size: 1.7rem;
     font-weight: 500;
     font-family: var(--title-font);
-    margin-bottom: 2.5rem;
+    margin-bottom: 3rem;
 }
 #open {
     width: 100%;
@@ -43,20 +43,24 @@ header {
 }
 #open div > p {
     margin-bottom: 1rem;
+    font-weight: 500;
+    font-size: 1.7rem;
 }
 .c-status {
+    display: block;
     width: 100%;
     border-radius: 1rem;
     border: 0;
     color: white;
     font-weight: 700;
-    font-size: 1.6rem;
+    font-size: 1.5rem;
     padding: 1rem 0;
-    transition: all .5s linear;
+    text-transform: uppercase;
 }
-#data-span {
-    background-color: gray;
+a.c-status {
+    text-decoration: none;
+    background-color: var(--light-green);
 }
 .u-color__entrega {
-    background-color: var(--red);
+    background-color: #F15A24;
 }
