--- a/styles/index.css
+++ b/styles/index.css
@@ -17,8 +17,9 @@
     --title-font: "Space Grotesk", arial, helvetica, sans-serif;
     --ligth-green: #41ec63;
     --green: #20ce20;
-    --red: #f14848;
-    --border-color: #0000007b;
+    --red: #B22222;
+    --border-color: #dbdbdbfa;
+    --bg: #fff;
 }
 button:hover {
     cursor: pointer;
@@ -30,7 +31,7 @@ body {
     min-height: 100vh;
     font-size: 1.6rem;
     padding-bottom: 4rem;
-    background: #f5f5f5;
+    background: var(--bg);
 }
 h1,h2,h3 {
     font-family: var(--title-font);
@@ -47,7 +48,7 @@ footer {
     width: 100%;
     padding: 1rem 0;
     border: 0;
-    background-color: var(--red);
+    background-color: #333333;
     box-shadow: 0px 1px 8px 0px #000000b0;
     font-size: 1.5rem;
     font-weight: 500;
