--- a/styles/main.css
+++ b/styles/main.css
@@ -9,6 +9,7 @@ main {
     font-size: 3.2rem;
     line-height: 3rem;
     padding: 1rem 0;
+    color: #333333;
 }
 .s-menu {
     width: 100%;
@@ -26,7 +27,7 @@ main {
     width: 20rem;
     padding: 2rem 1.5rem;
     border: 1px solid var(--border-color);
-    border-radius: 1.5rem;
+    border-radius: 1rem;
     /* transition: all .7s linear; */
 
 }
@@ -62,7 +63,8 @@ main {
 }
 .c-cart {
     width: 100%;
-    background: var(--green);
+    background: var(--red);
+    font-family: "Inter", sans-serif;
     border: 0;
     border-radius: 0.5rem;
     padding: 1rem;
